--- a/config.json
+++ b/config.json
@@ -10,7 +10,9 @@
       "url": "https://bartek-wawrzkowicz.github.io/roku_api/assets/codeodrive_logo.png",
       "width": 100,
       "height": 100
-    }
+    },
+    "background": {
+      "url": "https://bartek-wawrzkowicz.github.io/roku_api/assets/codeodrive_background.png"
   },
 
   "menu": {
