--- a/config.json
+++ b/config.json
@@ -6,13 +6,9 @@
 
   "app": {
     "name": "Codeodrive",
-    "logo": {
-      "url": "https://bartek-wawrzkowicz.github.io/roku_api/assets/codeodrive_logo.png",
-      "width": 100,
-      "height": 100
-    },
-    "background": {
-      "url": "https://bartek-wawrzkowicz.github.io/roku_api/assets/codeodrive_background.png"
+    "background": "https://bartek-wawrzkowicz.github.io/roku_api/assets/codeodrive_background.png",
+    "logo": "https://bartek-wawrzkowicz.github.io/roku_api/assets/codeodrive_logo.png"
+    }
   },
 
   "menu": {
