--- a/config.json
+++ b/config.json
@@ -59,7 +59,7 @@
           "id": "list_3",
           "layout": "frame",
           "source": "list_3.json",
-          "screen": "HOME_SCREEN""
+          "screen": "HOME_SCREEN"
         },
         {
           "id": "list_4",
