--- a/config.json
+++ b/config.json
@@ -107,24 +107,25 @@
 
   "lists": {
     "leftMargin": 220,
-    "layout": {
+    "cards": {
         "banner": {
-            "width": 1635,
-            "height": 404,
+            "type": "featured",
+            "width": 1200,
+            "height": 675,
             "itemsSpacing": 30,
             "bottomMargin": 65
         },
         "frame": {
-            "width": 312,
-            "height": 177,
-            "itemsSpacing": 24,
+            "width": 402,
+            "height": 226,
+            "itemsSpacing": 30,
             "bottomMargin": 34
         },
         "round": {
-            "width": 250,
-            "height": 250,
-            "itemsSpacing": 10,
-            "bottomMargin": -15
+            "width": 220,
+            "height": 220,
+            "itemsSpacing": 30,
+            "bottomMargin": 10
         }
     }
   }
