--- a/config.json
+++ b/config.json
@@ -56,6 +56,7 @@
   "screens": {
     "HOME_SCREEN": {
       "type": "home",
+      "enabled": true,
       "lists": [
         {
           "id": "list_1",
